--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/LIDCToolbox"]
-	path = lib/LIDCToolbox
+[submodule "matlab/lib/LIDCToolbox"]
+	path = matlab/lib/LIDCToolbox
 	url = https://github.com/yulkang/LIDCToolbox.git
